--- a/src/index.html
+++ b/src/index.html
@@ -7,31 +7,17 @@
   <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="favicon.ico">
+  <link rel="stylesheet" href="index.scss">
   <link rel="stylesheet" href="bem-flex-grid.scss">
-
-  <style>
-    html {
-      font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Verdana, sans-serif;
-    }
-    html, body {
-      height: 100%;
-    }
-    body {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 1rem;
-    }
-  </style>
 </head>
 <body>
 
   <div class="bfg bfg--row bfg--spaced">
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/1.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/2.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/3.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/4.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/5.html"></iframe></div></div>
   </div>
 
 </body>
