--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,15 @@
   <link rel="stylesheet" href="bem-flex-grid.scss">
 </head>
 <body>
+  <h1>Bem Flex Grid</h1>
 
-  <div class="bfg bfg--row bfg--spaced">
+  <div class="bfg bfg--row bfg--gap">
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/1.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/2.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/3.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/4.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/5.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/6.html"></iframe></div></div>
   </div>
-
 </body>
 </html>
