--- a/src/demos/1.html
+++ b/src/demos/1.html
@@ -12,13 +12,29 @@
 </head>
 <body>
 
-  <div class="bfg bfg--row bfg--spaced">
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+  <div class="bfg bfg--col bfg--gap">
 
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--6 bfg bfg--row">
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div></div>
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div></div>
+    </div>
+
+    <div class="bfg__box bfg__box--6 bfg bfg--row">
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div></div>
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div></div>
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div></div>
+    </div>
+
   </div>
 
 </body>
