--- a/src/demos/3.html
+++ b/src/demos/3.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <div class="bfg bfg--spaced bfg--row">
+  <div class="bfg bfg--gap bfg--row">
     <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
 
     <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
