--- a/src/demos/1.html
+++ b/src/demos/1.html
@@ -12,26 +12,48 @@
 </head>
 <body>
 
-  <div class="bfg bfg--gap bfg--row">
-    <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
+  <div class="bfg bfg--col bfg--gap">
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
 
-    <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
 
-    <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--fill"></div></div>
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
 
-    <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--1"><div class="bfg__content bfg__content--fill"></div></div>
 
-    <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
 
-    <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--10"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--2"><div class="bfg__content bfg__content--fill"></div></div>
 
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
+
+      <div class="bfg__box bfg__box--9"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--3"><div class="bfg__content bfg__content--fill"></div></div>
+
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
+
+      <div class="bfg__box bfg__box--8"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
+
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
+
+      <div class="bfg__box bfg__box--7"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--5"><div class="bfg__content bfg__content--fill"></div></div>
+
+    </div>
+    <div class="bfg__box bfg__box--2 bfg bfg--row">
+
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+      <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
+
+    </div>
   </div>
 
 </body>
