--- a/src/demos/2.html
+++ b/src/demos/2.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="bfg bfg--gap bfg--col">
+    <div class="bfg bfg--col bfg--gap bfg--wrap">
       <div class="bfg__box bfg__box--12"><div class="bfg__content bfg__content--fill"></div></div>
 
       <div class="bfg__box bfg__box--11"><div class="bfg__content bfg__content--fill"></div></div>
