--- a/src/demos/6.html
+++ b/src/demos/6.html
@@ -15,26 +15,18 @@
     <div class="bfg__box bfg__box--8 bfg bfg--row">
       <div class="bfg__box bfg__box--4">
         <div class="bfg__content bfg__content--fill">
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
       <div class="bfg__box bfg__box--8">
         <div class="bfg__content bfg__content--fill">
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-          huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
       </div>
     </div>
     <div class="bfg__box bfg__box--4">
       <div class="bfg__content bfg__content--fill">
-        huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-        huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-        huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-        huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
-        huihfuizoaf ehu fehuoafheu iohafeu ioa fehui oafhue ioaefuiao
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </div>
   </div>
