--- a/src/demos/2.html
+++ b/src/demos/2.html
@@ -7,7 +7,7 @@
   <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="demos.scss">
+  <link rel="stylesheet" href="demo.scss">
   <link rel="stylesheet" href="../bem-flex-grid.scss">
 </head>
 <body>
