--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <h1>Bem Flex Grid</h1>
 
   <div class="bfg bfg--row bfg--gap bfg--wrap">
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/a.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/1.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/2.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/3.html"></iframe></div></div>
