--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,13 @@
   <h1>Bem Flex Grid</h1>
 
   <div class="bfg bfg--row bfg--gap bfg--wrap">
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/1.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/2.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/3.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/4.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/5.html"></iframe></div></div>
+    <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/basic/6.html"></iframe></div></div>
+
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/a.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/1.html"></iframe></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content"><iframe src="./demos/2.html"></iframe></div></div>
