Switch to TypeScript and refactoring a lot... - Also add support for multiple rows/cols modifiers

--- a/src/demos/basic/1.html
+++ b/src/demos/basic/1.html
@@ -7,10 +7,10 @@
   <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="../../favicon.ico">
-  <link rel="stylesheet" href="../demo.scss">
+  <link rel="stylesheet" href="../../demo.scss">
   <link rel="stylesheet" href="../../bem-flex-grid.scss">
 
-  <script src="../demo.js"></script>
+  <script src="../../demo.ts"></script>
 </head>
 <body>
   <div id="demo-description">
@@ -24,6 +24,6 @@
     <div class="bfg__box bfg__box--6"></div>
   </div>
 
-  <script>bfgFillBoxes()</script>
+  <script>Demo.fillGrids();</script>
 </body>
 </html>
