--- a/src/demos/3.html
+++ b/src/demos/3.html
@@ -7,10 +7,10 @@
   <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="demo.scss">
+  <link rel="stylesheet" href="../demo.scss">
   <link rel="stylesheet" href="../bem-flex-grid.scss">
 
-  <script src="demo.js"></script>
+  <script src="../demo.ts"></script>
 </head>
 <body>
   <div class="bfg bfg--col bfg--gap">
@@ -26,6 +26,6 @@
     </div>
   </div>
 
-  <script>bfgFillBoxes()</script>
+  <script>Demo.fillGrids();</script>
 </body>
 </html>
