--- a/src/demos/5.html
+++ b/src/demos/5.html
@@ -7,10 +7,10 @@
   <title>Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="../favicon.ico">
-  <link rel="stylesheet" href="demo.scss">
+  <link rel="stylesheet" href="../demo.scss">
   <link rel="stylesheet" href="../bem-flex-grid.scss">
 
-  <script src="demo.js"></script>
+  <script src="../demo.ts"></script>
 </head>
 <body>
 
@@ -25,6 +25,6 @@
     <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>bfgFillBoxes()</script>
+  <script>Demo.fillGrids();</script>
 </body>
 </html>
