--- a/src/demos/5.html
+++ b/src/demos/5.html
@@ -25,6 +25,6 @@
     <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>Demo.fillGrids();</script>
+  <script>Demo.fillGrid();</script>
 </body>
 </html>
