--- a/src/demos/basic/4.html
+++ b/src/demos/basic/4.html
@@ -14,8 +14,8 @@
 </head>
 <body>
   <div id="demo-description">
-    When using <code>.bfg--wrap</code>, <code>.bfg__box</code> can be displayed on multiple lines.
-    In this case, the <code>.bfg--col</code> container can be bigger than the inherited width.
+    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.
+    In this case, the boxes can leave outside the <code>.bfg--col</code> container.
   </div>
 
   <div class="bfg bfg--col bfg--wrap">
@@ -24,6 +24,6 @@
     <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.fillGrids();</script>
+  <script>Demo.fillGrid();</script>
 </body>
 </html>
