--- a/src/demos/basic/6.html
+++ b/src/demos/basic/6.html
@@ -14,19 +14,17 @@
 </head>
 <body>
   <div id="demo-description">
-    To always fit the inherited width, use a <code>.bfg--row</code> wrapper and use a separate <code>.bfg--col</code> for each col.
+    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.
+    If you know the number of lines, you can still fit the inherited height using <code>.bfg--2cols</code>.
+    In this case, all the columns have the same width.
   </div>
 
-  <div class="bfg bfg--row">
-    <div class="bfg__box bfg bfg--col">
-      <div class="bfg__box bfg__box--6"></div>
-      <div class="bfg__box bfg__box--6"></div>
-    </div>
-    <div class="bfg__box bfg bfg--col">
-      <div class="bfg__box bfg__box--12"></div>
-    </div>
+  <div class="bfg bfg--col bfg--2cols bfg--wrap">
+    <div class="bfg__box bfg__box--6"></div>
+    <div class="bfg__box bfg__box--6"></div>
+    <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.fillGrids();</script>
+  <script>Demo.fillGrid();</script>
 </body>
 </html>
