--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     <a href="demos/basic/4.html"></a>
     <a href="demos/basic/5.html"></a>
     <a href="demos/basic/6.html"></a>
+    <a href="demos/basic/7.html"></a>
+    <a href="demos/basic/8.html"></a>
   </div>
 
   <script>Demo.showcase();</script>
