Add .bfg__header (in progress)

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
     <a href="demos/basic/6.html"></a>
     <a href="demos/basic/7.html"></a>
     <a href="demos/basic/8.html"></a>
+
+    <a href="demos/content/1.html"></a>
+    <a href="demos/content/2.html"></a>
+    <a href="demos/content/3.html"></a>
   </div>
 
   <script>Demo.showcase();</script>
