Add .bfg__box--fixed to fix width/height in pixels

--- a/src/demos/basic/7.html
+++ b/src/demos/basic/7.html
@@ -23,7 +23,7 @@
       <div class="bfg__box bfg__box--6"></div>
       <div class="bfg__box bfg__box--6"></div>
     </div>
-    <div class="bfg__box bfg bfg--row">
+    <div class="bfg__box bfg__box--8 bfg bfg--row">
       <div class="bfg__box bfg__box--8 bfg__box--12"></div>
     </div>
   </div>
