--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     <a href="demos/basic/6.html"></a>
     <a href="demos/basic/7.html"></a>
     <a href="demos/basic/8.html"></a>
+    <a href="demos/basic/9.html"></a>
+    <a href="demos/basic/10.html"></a>
 
     <a href="demos/content/1.html"></a>
     <a href="demos/content/2.html"></a>
