--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -15,27 +15,27 @@
 <body>
   <div class="bfg bfg--col bfg--gap bfg--wrap bfg--sm-disabled">
     <div class="bfg__box bfg__box--3">
-      <header class="bfg__header">Header</header>
+      <header class="bfg__header bfg__header--fill">Header</header>
       <div class="bfg__content bfg__content--fill"></div>
     </div>
 
     <div class="bfg__box bfg__box--6 bfg bfg--row">
       <div class="bfg__box bfg__box--3">
-        <header class="bfg__header">Header</header>
+        <header class="bfg__header bfg__header--fill">Header</header>
         <div class="bfg__content bfg__content--fill"></div>
       </div>
       <div class="bfg__box bfg__box--6">
-        <header class="bfg__header">Header</header>
+        <header class="bfg__header bfg__header--fill">Header</header>
         <div class="bfg__content bfg__content--fill"></div>
       </div>
       <div class="bfg__box bfg__box--3">
-        <header class="bfg__header">Header</header>
+        <header class="bfg__header bfg__header--fill">Header</header>
         <div class="bfg__content bfg__content--fill"></div>
       </div>
     </div>
 
     <div class="bfg__box bfg__box--3">
-      <header class="bfg__header">Header</header>
+      <header class="bfg__header bfg__header--fill">Header</header>
       <div class="bfg__content bfg__content--fill"></div>
     </div>
   </div>
