Fix .bfg__content padding

--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -13,7 +13,11 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div class="bfg bfg--col bfg--gap bfg--wrap bfg--sm-disabled">
+  <div id="demo-description">
+    Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.
+  </div>
+
+  <div class="bfg bfg--col bfg--gap">
     <div class="bfg__box bfg__box--3">
       <header class="bfg__header bfg__header--fill">Header</header>
       <div class="bfg__content bfg__content--fill"></div>
