Add view source code

--- a/src/demos/basic/3.html
+++ b/src/demos/basic/3.html
@@ -24,6 +24,6 @@
     <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
