--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -44,6 +44,6 @@
     </div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
