--- a/src/demos/3.html
+++ b/src/demos/3.html
@@ -26,6 +26,6 @@
     </div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
