--- a/src/demos/4.html
+++ b/src/demos/4.html
@@ -22,6 +22,6 @@
     <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
