--- a/src/demos/basic/10.html
+++ b/src/demos/basic/10.html
@@ -24,6 +24,6 @@
     <div class="bfg__box"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
