--- a/src/demos/basic/6.html
+++ b/src/demos/basic/6.html
@@ -25,6 +25,6 @@
     <div class="bfg__box bfg__box--12"></div>
   </div>
 
-  <script>Demo.fillGrid();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
