--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -6,6 +6,8 @@
 
   <title>Bem Flex Grid</title>
 
+  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../../demo.scss">
   <link rel="stylesheet" href="../../bem-flex-grid.scss">
@@ -44,6 +46,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode();</script>
 </body>
 </html>
