--- a/src/demos/basic/2.html
+++ b/src/demos/basic/2.html
@@ -6,6 +6,8 @@
 
   <title>Bem Flex Grid</title>
 
+  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../../demo.scss">
   <link rel="stylesheet" href="../../bem-flex-grid.scss">
