--- a/src/demos/content/2.html
+++ b/src/demos/content/2.html
@@ -6,6 +6,8 @@
 
   <title>Bem Flex Grid</title>
 
+  <link rel="stylesheet" href="../../../node_modules/prismjs/themes/prism.css">
+
   <link rel="shortcut icon" href="../../favicon.ico">
   <link rel="stylesheet" href="../../demo.scss">
   <link rel="stylesheet" href="../../bem-flex-grid.scss">
@@ -39,5 +41,7 @@
     <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
     <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
+
+  <script>Demo.viewCode();</script>
 </body>
 </html>
