Improve demo naming and add tslint support

--- a/src/demos/basic/10.html
+++ b/src/demos/basic/10.html
@@ -21,9 +21,17 @@
   </div>
 
   <div class="bfg bfg--col bfg--gap">
-    <div class="bfg__box bfg__box--fixed" style="height:150px"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box bfg__box--4"><div class="bfg__content bfg__content--fill"></div></div>
-    <div class="bfg__box"><div class="bfg__content bfg__content--fill"></div></div>
+    <div class="bfg__box bfg__box--fixed" style="height:150px">
+      <div class="bfg__content bfg__content--fill"></div>
+    </div>
+
+    <div class="bfg__box bfg__box--4">
+      <div class="bfg__content bfg__content--fill"></div>
+    </div>
+
+    <div class="bfg__box">
+      <div class="bfg__content bfg__content--fill"></div>
+    </div>
   </div>
 
   <script>Demo.viewCode(); Demo.fillGrid();</script>
