Update README and add markdown to html generator

--- a/src/demos/content/1.html
+++ b/src/demos/content/1.html
@@ -42,6 +42,6 @@
     <div class="bfg__box bfg__box--6"><div class="bfg__content bfg__content--fill"></div></div>
   </div>
 
-  <script>Demo.viewCode(); Demo.fillGrid();</script>
+  <script>Demo.viewCode();</script>
 </body>
 </html>
