--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Bem Flex Grid</title>
+  <title>Demo - Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="stylesheet" href="demo.scss">
@@ -14,6 +14,11 @@
 </head>
 <body>
   <h1>Bem Flex Grid</h1>
+
+  <header>
+    <p>In this page, you'll find a lot of real examples of how to use the grid.</p>
+    <p>For a quick overview, check out this <a href="introduction.html">introduction</a>.</p>
+  </header>
 
   <div id="demo-showcase">
     <a href="demos/basic/1.html"></a>
