Replace Xrows and Xcols with lines-X

--- a/src/demos/basic/6.html
+++ b/src/demos/basic/6.html
@@ -17,11 +17,11 @@
 <body>
   <div id="demo-description">
     When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.
-    If you know the number of lines, you can still fit the inherited height using <code>.bfg--2cols</code>.
+    If you know the number of lines, you can still fit the inherited height using <code>.bfg--lines-2</code>.
     In this case, all the columns have the same width.
   </div>
 
-  <div class="bfg bfg--col bfg--2cols bfg--wrap">
+  <div class="bfg bfg--col bfg--lines-2 bfg--wrap">
     <div class="bfg__box bfg__box--6"></div>
     <div class="bfg__box bfg__box--6"></div>
     <div class="bfg__box bfg__box--12"></div>
