--- a/src/introduction.html
+++ b/src/introduction.html
@@ -32,21 +32,21 @@
 </code></pre>
 <p>If using <code>.bfg.bfg--wrap.bfg--row</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
 <p>In this case the total height of all <code>.bfg__box</code> might be bigger than the <code>.bfg</code> container height.</p>
-<p>If you know that there's exactly 2 rows at the end, use <code>.bfg--2rows</code> to define the height of each <code>.bfg__box</code>.</p>
-<p>In the same way, use <code>.bfg--3rows</code> or <code>.bfg--4rows</code> to fit exactly 3 or 4 rows respectively.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--2rows&quot;&gt;&lt;/div&gt;
+<p>If you know that there's exactly 2 rows at the end, use <code>.bfg--lines-2</code> to define the height of each <code>.bfg__box</code>.</p>
+<p>In the same way, use <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code> to fit exactly 3 or 4 rows respectively.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-2&quot;&gt;&lt;/div&gt;
 
-&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--3rows&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-3&quot;&gt;&lt;/div&gt;
 
-&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--4rows&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-4&quot;&gt;&lt;/div&gt;
 </code></pre>
 <p>The same pattern is applicable to <code>.bfg.bfg--wrap.bfg--col</code>.
-In this context, use<code>.bfg--2cols</code>, <code>.bfg--3cols</code> or <code>.bfg--4cols</code>.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--2cols&quot;&gt;&lt;/div&gt;
+In this context, use<code>.bfg--lines-2</code>, <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code>.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-2&quot;&gt;&lt;/div&gt;
 
-&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--3cols&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-3&quot;&gt;&lt;/div&gt;
 
-&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--4cols&quot;&gt;&lt;/div&gt;
+&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-4&quot;&gt;&lt;/div&gt;
 </code></pre>
 <p>To add a gap between <code>.bfg__box</code>, use <code>.bfg--gap</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;&lt;/div&gt;
