Build .min css and improve README

--- a/src/introduction.html
+++ b/src/introduction.html
@@ -13,43 +13,67 @@
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant</p>
-<h2>Grid blocks and elements</h2>
+<h2>Grid block and elements</h2>
+<p>At core the grid system consists of one block <code>.bfg</code> and one element <code>.bfg__box</code>.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
+  &lt;div class=&quot;bfg__box&quot;&gt;&lt;/div&gt;
+  &lt;div class=&quot;bfg__box&quot;&gt;&lt;/div&gt;
+  ...
+&lt;/div&gt;
+</code></pre>
+<p>You can fill the boxes using the optional <code>.bfg__content</code>.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
+  &lt;div class=&quot;bfg__box&quot;&gt;
+    &lt;div class=&quot;bfg__content&quot;&gt;&lt;/div&gt;
+  &lt;/div&gt;
+  ...
+&lt;/div&gt;
+</code></pre>
+<p>You can add an header to the filled boxes using the optional <code>.bfg__header</code>.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg&quot;&gt;
   &lt;div class=&quot;bfg__box&quot;&gt;
     &lt;div class=&quot;bfg__header&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__content&quot;&gt;&lt;/div&gt;
   &lt;/div&gt;
+  ...
 &lt;/div&gt;
 </code></pre>
 <h2><code>.bfg</code> modifiers</h2>
-<p>To define the direction the <code>.bfg__box</code> are placed in the <code>.bfg</code> container, use <code>.bfg--row</code> or <code>.bfg--col</code>.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row&quot;&gt;&lt;/div&gt;
-
-&lt;div class=&quot;bfg bfg--col&quot;&gt;&lt;/div&gt;
+<p>To define the direction the <code>.bfg__box</code> are placed in the <code>.bfg</code> container, you must use <code>.bfg--row</code> or <code>.bfg--col</code>.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<p>To allow the <code>.bfg__box</code> to wrap as needed onto multiple lines, use <code>.bfg--wrap</code>.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap&quot;&gt;&lt;/div&gt;
+<blockquote>
+<p>When using <code>.bfg--row</code>, the grid system will works only if the <code>.bfg</code> width (or its parent width) is defined.</p>
+</blockquote>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--col&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<p>If using <code>.bfg.bfg--wrap.bfg--row</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
-<p>In this case the total height of all <code>.bfg__box</code> might be bigger than the <code>.bfg</code> container height.</p>
-<p>If you know that there's exactly 2 rows at the end, use <code>.bfg--lines-2</code> to define the height of each <code>.bfg__box</code>.</p>
-<p>In the same way, use <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code> to fit exactly 3 or 4 rows respectively.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-2&quot;&gt;&lt;/div&gt;
-
-&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-3&quot;&gt;&lt;/div&gt;
-
-&lt;div class=&quot;bfg bfg--wrap bfg--row bfg--lines-4&quot;&gt;&lt;/div&gt;
+<blockquote>
+<p>When using <code>.bfg--col</code>, the grid system will works only if the <code>.bfg</code> height (or its parent height) is defined.</p>
+</blockquote>
+<p>To allow the <code>.bfg__box</code> to wrap as needed onto multiple lines, use the optional <code>.bfg--wrap</code>.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap&quot;&gt;...&lt;/div&gt;
 </code></pre>
-<p>The same pattern is applicable to <code>.bfg.bfg--wrap.bfg--col</code>.
+<p><strong>Example:</strong></p>
+<p>If using <code>.bfg.bfg--row.bfg--wrap</code> then the <code>.bfg__box</code> are placed in the row direction and wrapped onto multiple lines when needed.</p>
+<p>In this case the total height of all <code>.bfg__box</code> might be bigger than the <code>.bfg</code> container height itself.</p>
+<p>If you know that there's exactly 2 lines of <code>.bfg__box</code>, you can constrain them to fit into the <code>.bfg</code> container, by using <code>.bfg--lines-2</code>.</p>
+<p>In the same way, use <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code> to fit exactly 3 or 4 lines respectively.</p>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--lines-2&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--lines-3&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--lines-4&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<p>The same pattern applies to <code>.bfg.bfg--wrap.bfg--col</code>.
 In this context, use<code>.bfg--lines-2</code>, <code>.bfg--lines-3</code> or <code>.bfg--lines-4</code>.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-2&quot;&gt;&lt;/div&gt;
-
-&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-3&quot;&gt;&lt;/div&gt;
-
-&lt;div class=&quot;bfg bfg--wrap bfg--col bfg--lines-4&quot;&gt;&lt;/div&gt;
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--lines-2&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--lines-3&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--lines-4&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <p>To add a gap between <code>.bfg__box</code>, use <code>.bfg--gap</code>.</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;&lt;/div&gt;
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--gap&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <h2><code>.bfg__box</code> modifiers</h2>
 <p>Define the <code>.bfg__box</code> size using <code>.bfg__box--1</code>,  <code>.bfg__box--2</code>, ...,  <code>.bfg__box--12</code>.</p>
@@ -89,37 +113,41 @@ In this context, use<code>.bfg--lines-2</code>, <code>.bfg--lines-3</code> or <c
 <li>Add <code>.bfg__box--sm-8</code> to increase the size on <em>small sreens</em> (until 768px).</li>
 <li>Add <code>.bfg__box--xs-12</code> to increase the size on <em>extra small sreens</em> (until 576px).</li>
 </ul>
-<pre><code class="language-html">&lt;div class=&quot;bfg__box
+<pre><code class="language-html">...
+&lt;div class=&quot;bfg__box
   bfg__box--5
   bfg__box--xl-6
   bfg__box--lg-4
   bfg__box--sm-8
   bfg__box--xs-12&quot;&gt;
 &lt;/div&gt;
+...
 </code></pre>
 <h2><code>.bfg__header</code> and <code>.bfg__content</code> modifiers</h2>
 <p>TODO...</p>
-<pre><code class="language-html">&lt;div class=&quot;bfg__header bfg__header--fill&quot;&gt;&lt;/div&gt;
+<pre><code class="language-html">...
+&lt;div class=&quot;bfg__header bfg__header--fill&quot;&gt;&lt;/div&gt;
 &lt;div class=&quot;bfg__content bfg__content--fill&quot;&gt;&lt;/div&gt;
+...
 </code></pre>
 <h2>Nesting <code>.bfg</code> Advanced use case</h2>
-<p>To nest grids, use <code>.bfg</code> <strong>block</strong> on the <code>.bfg__box</code> <strong>element</strong>.</p>
+<p>To nest grids, use <code>.bfg</code> <em>block</em> on the <code>.bfg__box</code> <em>element</em>.</p>
 <p><strong>Example:</strong></p>
 <p>See below the <code>&lt;div&gt;</code> which have 2 behaviors:</p>
 <ul>
-<li><code>.bfg__box.bfg__box--6</code> as it is an <strong>element</strong> of the global <code>.bfg.bfg--col</code> <strong>block</strong>.</li>
-<li><code>.bfg.bfg--row</code> as it is a <strong>block</strong> of the nested <code>.bfg__box</code> <strong>elements</strong>.</li>
+<li><code>.bfg__box.bfg__box--6</code> as it is an <em>element</em> of the global <code>.bfg.bfg--col</code> <em>block</em>.</li>
+<li><code>.bfg.bfg--row</code> as it is a <em>block</em> of the nested <code>.bfg__box</code> <strong>elements</strong>.</li>
 </ul>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--gap&quot;&gt;
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
 
   &lt;!-- Nested grid starts here, on the .bfg__box element --&gt;
   &lt;div class=&quot;bfg__box bfg__box--6 bfg bfg--row&quot;&gt;
-    &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
 
+    &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
     &lt;div class=&quot;bfg__box bfg__box--6&quot;&gt;&lt;/div&gt;
-
     &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
+
   &lt;/div&gt;
 
   &lt;div class=&quot;bfg__box bfg__box--3&quot;&gt;&lt;/div&gt;
