--- a/src/introduction.html
+++ b/src/introduction.html
@@ -108,10 +108,10 @@ In this context, use<code>.bfg--lines-2</code>, <code>.bfg--lines-3</code> or <c
 <p><strong>Example:</strong></p>
 <ul>
 <li>Use <code>.bfg__box--5</code> to set the box size to be 5/12 of the available size for all <em>screen size</em> (even greater than 1200px).</li>
-<li>Add <code>.bfg__box--xl-6</code> to increase the size on <em>extra large sreens</em> (until 1200px).</li>
-<li>Add <code>.bfg__box--lg-4</code> to reduce the size on <em>large sreens</em> (until 992px).</li>
-<li>Add <code>.bfg__box--sm-8</code> to increase the size on <em>small sreens</em> (until 768px).</li>
-<li>Add <code>.bfg__box--xs-12</code> to increase the size on <em>extra small sreens</em> (until 576px).</li>
+<li>Add <code>.bfg__box--xl-6</code> to increase the size on <em>extra large screens</em> (until 1200px).</li>
+<li>Add <code>.bfg__box--lg-4</code> to reduce the size on <em>large screens</em> (until 992px).</li>
+<li>Add <code>.bfg__box--sm-8</code> to increase the size on <em>small screens</em> (until 768px).</li>
+<li>Add <code>.bfg__box--xs-12</code> to increase the size on <em>extra small screens</em> (until 576px).</li>
 </ul>
 <pre><code class="language-html">...
 &lt;div class=&quot;bfg__box
