Add showcase count (in progress)

--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -48,6 +48,6 @@
     </div>
   </div>
 
-  <script>Demo.viewCode();</script>
+  <script>Demo.viewCode(); Demo.fillGrid();</script>
 </body>
 </html>
