Include description in source code popup

--- a/src/demos/basic/2.html
+++ b/src/demos/basic/2.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    When NOT using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes are displayed on one line.
+  <div id="demo-source__description">
+    When NOT using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes are displayed on one line.<br>
     In this case, the boxes can NOT leave outside the <code>.bfg--col</code> container.
   </div>
 
