--- a/src/demos/basic/5.html
+++ b/src/demos/basic/5.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.
+  <div id="demo-source__description">
+    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.<br>
     If you know the number of lines, you can still fit the inherited height using <code>.bfg--lines-2</code>.
     In this case, all the rows have the same height.
   </div>
