--- a/src/demos/basic/9.html
+++ b/src/demos/basic/9.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    To fix the width of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>width</code>.
+  <div id="demo-source__description">
+    To fix the width of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>width</code>.<br>
     In this case, one of the other boxes should fill the remaining space by having <code>.bfg__box</code> without any size (like <code>.bfg__box--6</code>).
   </div>
 
