--- a/src/demos/basic/3.html
+++ b/src/demos/basic/3.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.
+  <div id="demo-source__description">
+    When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.<br>
     In this case, the boxes can leave outside the <code>.bfg--row</code> container.
   </div>
 
