--- a/src/demos/basic/8.html
+++ b/src/demos/basic/8.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    To always fit the inherited width, use a <code>.bfg--row</code> wrapper and use a separate <code>.bfg--col</code> for each col.
+  <div id="demo-source__description">
+    To always fit the inherited width, use a <code>.bfg--row</code> wrapper and use a separate <code>.bfg--col</code> for each col.<br>
     This is more complex, but you can adjust the height of each row.
   </div>
 
