--- a/src/demos/content/2.html
+++ b/src/demos/content/2.html
@@ -15,8 +15,8 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-description">
-    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.
+  <div id="demo-source__description">
+    There are 12 sizes available to make the grid layout, from <code>.bfg__box--1</code> to <code>.bfg__box--12</code>.<br>
     Use the css class <code>.bfg__content.bfg__content--fill</code> to fill the boxes content.
   </div>
 
