Improve demo .ts and .scss

--- a/src/demos/basic/10.html
+++ b/src/demos/basic/10.html
@@ -15,7 +15,7 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-source__description">
+  <div class="demo-source__description">
     To fix the height of a particular box in pixels, use <code>.bfg__box--fixed</code> and give the box the expected <code>height</code>.<br>
     In this case, one of the other boxes should fill the remaining space by having <code>.bfg__box</code> without any size (like <code>.bfg__box--6</code>).
   </div>
