--- a/src/demos/content/3.html
+++ b/src/demos/content/3.html
@@ -15,7 +15,7 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-source__description">
+  <div class="demo-source__description">
     Use <code>.bfg__header</code> with <code>.bfg__content</code> to add an header.
   </div>
 
