--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="demo-index">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,7 +7,10 @@
   <title>Demo - Bem Flex Grid</title>
 
   <link rel="shortcut icon" href="favicon.ico">
+
   <link rel="stylesheet" href="demo.scss">
+  <link rel="stylesheet" href="main.scss">
+
   <link rel="stylesheet" href="bem-flex-grid.scss">
 
   <script src="demo.ts"></script>
