--- a/src/demos/basic/1.html
+++ b/src/demos/basic/1.html
@@ -15,7 +15,7 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-source__description">
+  <div class="demo-source__description">
     When NOT using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes are displayed on one line.<br>
     In this case, the boxes can NOT leave outside the <code>.bfg--row</code> container.
   </div>
