--- a/src/demos/basic/4.html
+++ b/src/demos/basic/4.html
@@ -15,7 +15,7 @@
   <script src="../../demo.ts"></script>
 </head>
 <body>
-  <div id="demo-source__description">
+  <div class="demo-source__description">
     When using <code>.bfg--wrap</code>, the <code>.bfg__box</code> boxes can be displayed on multiple lines.<br>
     In this case, the boxes can leave outside the <code>.bfg--col</code> container.
   </div>
